--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged / come home refreshed</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,18 +24,86 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <header>
+    <div class="content-wrapper">
+      <a href="unpluggedlogo.png"><img src="unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  </header>
+
+  <main>
+
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
+      <div class="hero-image"> <img src="img/hero-image.jpg" alt="retreat yourself">
+      </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        </div>
+        <div class="form">
+         <h3>Find out more</h3>
+          <input type="text" name="name" value="email address">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div>
+    </aside>
+
+  </main> <!--main wrapper -->
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div> <!--footer-contact ends-->
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/yoursite" target="_blank">facebook</a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank">twitter</a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank">instagram</a></p>
+          </div> 
+        </div> 
+      </div> <!--footer-content ends -->
+    </div> <!--footer content-wrapper ends-->
+
+     <div class="copyright">
+       <p>Copyright 2018 | Unplugged</p>
+     </div>
+
+  </footer>
+
+    <!-- Add your site or application content here -->
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+  
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  
 </body>
 
 </html>
