finished html code for homepage mobile first

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 </head>
 
 <body>
+    <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
 
   <header>
     <div class="content-wrapper">
-      <a href="unpluggedlogo.png"><img src="unpluggedlogo.png" alt="unplugged logo"></a>
+      <a href="unpluggedlogo.png">
+        <img src="unpluggedlogo.png" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -43,7 +48,10 @@
     <section class="hero-area">
       <div class="content-wrapper">
         <h1>Retreat from the desk, return refreshed.</h1>
-      <div class="hero-image"> <img src="img/hero-image.jpg" alt="retreat yourself">
+      <div class="hero-image"> 
+        <a href="img/hero-image.jpg">
+          <img/hero-image.jpg" alt="retreat yourself">
+        </a>
       </div>
     </section>
 
@@ -55,12 +63,81 @@
         </div>
         <div class="form">
          <h3>Find out more</h3>
-          <input type="text" name="name" value="email address">
+          <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">
         </div>
       </div>
     </aside>
 
+    <section class="features">
+      <div class="content-wrapper">
+        <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+        <div class="features-items">
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Located in a 
+            peaceful bungalow outside of Lake Geneva, Wisconsin.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms,
+            and 4 breakout rooms.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Private chef team providing on demand meals - 
+            just like your team kitchen.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses,
+            including private beach 1/2 mile from bungalow.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Retreat facilitator to manage your day to day
+            activities so you all get a change to reset.
+          </p>
+        </article>
+
+        <article>
+          <p class="fontawesome-icon"></p>
+          <p class="features-item-description">Dedicated computer room for times
+            that you must wifi.
+          </p>
+        </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="content-wrapper">
+        <h2>Be a better team in 5 days, like these.</h2>
+        <article>
+          <div>
+            <h3>LaCrue Bottling Co. October 2017</h3>
+            <p>
+              Lorem ipsum dolor sit amet, 
+              consectetur adipiscing elit, sed do eiusmod tempor 
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
+              veniam, quis nostrud exercitation ullamco laboris nisi ut 
+              aliquip ex ea commodo consequat. Duis aute irure dolor in 
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+              nulla pariatur. 
+            </p>
+          </div>
+        </article>  
+    </section> 
+
+    
   </main> <!--main wrapper -->
 
   <footer>
@@ -74,22 +151,21 @@
               hello@unplugged.com
             </p>
           </address>
-        </div> <!--footer-contact ends-->
+    </div> <!--footer-contact ends-->
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons">
-            <p><a href="https://www.facebook.com/yoursite" target="_blank">facebook</a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank">twitter</a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank">instagram</a></p>
+            <p><a href="https://www.facebook.com/Skillcrush" target="_blank">facebook</a></p>
+            <p><a href="https://www.twitter.com/Skillcrush" target="_blank">twitter</a></p>
+            <p><a href="https://www.instagram.com/Skillcrush" target="_blank">instagram</a></p>
           </div> 
         </div> 
       </div> <!--footer-content ends -->
-    </div> <!--footer content-wrapper ends-->
-
+    </div> 
+    <!--footer content-wrapper ends-->
      <div class="copyright">
        <p>Copyright 2018 | Unplugged</p>
      </div>
-
   </footer>
 
     <!-- Add your site or application content here -->
