--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged / come home refreshed</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,8 +24,104 @@
 
 <body>
 
+  <header>
+    <div class="content-wrapper">
+      <a href="unpluggedlogo.png">
+        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+
+  </header>
+
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <div class="mission-content">
+          <h2>
+            Our Mission - 
+            we want to make you the team you always wanted to be.
+          </h2>
+          <div class="mission-content">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas 
+              accumsan lacus vel facilisis.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+              tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse 
+              ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="map">
+        <figure>
+
+        </figure>
+    </section>
+    
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+          <adress class="contact-content">
+            <div>
+              <h4>General Information</h4>
+                <p>333 Main St, Lake Geneva, WI 53147
+                  555-555-5555
+                  hello@unplugged.com</p>
+            </div>
+            <div>
+                <h4>Chat with a Facilitator</h4>
+                <p>555-555-5556
+                  facilitator@unplugged.com</p>
+            </div>
+          </adress> 
+      </div> <!-- content wrapper ends -->
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+          <address>
+            <p>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+    </div> <!--footer-contact ends-->
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p><a href="https://www.facebook.com/Skillcrush" target="_blank">facebook</a></p>
+            <p><a href="https://www.twitter.com/Skillcrush" target="_blank">twitter</a></p>
+            <p><a href="https://www.instagram.com/Skillcrush" target="_blank">instagram</a></p>
+          </div> 
+        </div> 
+      </div> <!--footer-content ends -->
+    </div> 
+    <!--footer content-wrapper ends-->
+     <div class="copyright">
+       <p>Copyright 2018 | Unplugged</p>
+     </div>
+  </footer>
+
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
