created css skeleton

--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
     <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
-          <adress class="contact-content">
+          <address class="contact-content">
             <div>
               <h4>General Information</h4>
                 <p>333 Main St, Lake Geneva, WI 53147
