--- a/index.html
+++ b/index.html
@@ -29,10 +29,15 @@
 
   <header>
     <div class="content-wrapper">
-      <a href="unpluggedlogo.png">
-        <img src="unpluggedlogo.png" alt="unplugged logo">
-      </a>
+
+      <figure>
+        <a href="unpluggedlogo.png">
+          <img src="unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
+
       <div class="header-divider"></div>
+
       <nav>
         <ul>
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
@@ -50,7 +55,7 @@
         <h1>Retreat from the desk, return refreshed.</h1>
       <div class="hero-image"> 
         <a href="img/hero-image.jpg">
-          <img/hero-image.jpg" alt="retreat yourself">
+          <img src="img/hero-image.jpg" alt="retreat yourself">
         </a>
       </div>
     </section>
